# tap-dynamodb

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_dynamodb/: __init__.py  __main__.py  aws_auth.py  aws_authenticators.py  aws_base.py  client.py  dynamo.py  dynamodb_connector.py  exception.py  streams.py  tap.py
tap_dynamodb/connectors/: aws_boto_connector.py
tests/: test_aws_auth.py  test_aws_authenticators.py  test_boto_connector.py  test_core.py  test_dynamodb.py  test_dynamodb_connector.py
