[tool.poetry]
name = "meltanolabs-tap-dynamodb"
version = "0.3.0"
description = "`tap-dynamodb` is a Singer tap for DynamoDB, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Pat Nadolny"]
keywords = [
    "ELT",
    "DynamoDB",
]
license = "Apache 2.0"
packages = [
    { include = "tap_dynamodb" },
]

[tool.poetry.dependencies]
python = ">=3.8"
singer-sdk = { version="^0.37.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
boto3 = "^1.34.103"
genson = "^1.2.2"
orjson = "^3.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
flake8 = "^5.0.4"
darglint = { version = "^1.8.1", "python" = "<4" }
black = "^24.4.2"
pyupgrade = "^3.3.1"
mypy = "^1.10.0"
isort = "^5.11.5"
singer-sdk = { version="^0.37.0", extras = ["testing"] }
moto = "^5.0.7"
coverage = "^7.5.1"
pydocstyle = "^6.3.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_dynamodb"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-dynamodb = 'tap_dynamodb.tap:TapDynamoDB.cli'
